[package]
name = "csml"
version = "0.1.0"
authors = ["Alexis Merelo <alexis.merelo@clevy.io>"]
edition = "2018"

[dependencies]
csml_engine = { path = "../csml_engine" }
csml_interpreter = { path = "../csml_interpreter" }


serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.9.19"

crossterm = "0.26.1"
tui = { version = "0.19.0", default-features = false, features = ['crossterm'] }
unicode-width = "0.1.5"
image = "0.24.6"
viuer = "0.6.2"

rand = "0.8.4"

clap = "4.2.1"
clap_derive = "4.2.0"
git2 = "0.17.0"
dotenv = "0.15.0"
