[package]
name = "csml_engine"
version = "1.11.2"
authors = [
    "Alexis Merelo <alexis.merelo@clevy.io>",
    "François Falala-Sechet <francois@clevy.io>",
    "Bastien Botella <bastien@clevy.io>",
    "Jefferson Le Quellec <jefferson.le-quellec@clevy.io>"
]
description = """
The CSML Engine is a conversational engine designed to make it extremely easy to create rich and powerful chatbots.
"""
homepage = "https://www.csml.dev"
repository = "https://github.com/CSML-by-Clevy/csml-engine"
keywords = ["chatbot", "programming-language", "csml"]
categories = ["text-processing"]
readme = "../README.md"
license = "Apache-2.0"
edition = "2018"

[features]
mongo = ["mongodb", "bson", "futures"]
dynamo = ["rusoto_core", "rusoto_dynamodb", "rusoto_s3", "serde_dynamodb"]
postgresql = ["diesel_postgresql"]
sqlite = ["diesel_sqlite"]
pooled = ["diesel/r2d2"]

async = ["reqwest", "futures"]
postgresql-async = ["postgresql", "diesel-async/postgres", "diesel/chrono", "diesel/uuid", "diesel_migrations", "async"]

diesel_postgresql = ["diesel/postgres", "diesel/chrono", "diesel/uuid", "diesel_migrations"] # "diesel/uuidv07",
diesel_sqlite = ["diesel/sqlite", "diesel/chrono", "diesel_migrations"]

# We don't actually use rustls but other pure rust implementations
rustls = ["ring", "aes-gcm"]

default = ["openssl"]

[dependencies.diesel_migrations]
version = "2.1.0"
optional = true

[dependencies.diesel]
version = "2.1.0"
optional = true

[dependencies.diesel-async]
version = "0.3.2"
optional = true

[dependencies.mongodb]
version = "2.6.0"
optional = true
default-features = false
features = ["sync"]

[dependencies.futures]
version = "0.3.28"
optional = true

[dependencies.bson]
version = "2.0.0"
features = ["chrono-0_4"]
optional = true

[dependencies.serde_dynamodb]
version = "0.9.0"
default_features = false
features = ["rustls"]
optional = true

[dependencies.reqwest]
version = "0.11.18"
features = ["json"]
optional = true

[dependencies.rusoto_core]
version = "0.48.0"
default_features = false
features = ["rustls"]
optional = true

[dependencies.rusoto_dynamodb]
version = "0.48.0"
default_features = false
features = ["rustls"]
optional = true

[dependencies.rusoto_s3]
version = "0.48.0"
default_features = false
features = ["rustls"]
optional = true

[dependencies.openssl]
version = "0.10.55"
features = ["vendored"]
optional = true

[dependencies.ring]
version = "0.16.20"
optional = true

[dependencies.aes-gcm]
version = "0.10.1"
optional = true

[dependencies]
csml_interpreter = { version = "1.11.2", path = "../csml_interpreter" }
multimap = "0.9.0"
md-5 = "0.10.0"
chrono = { version = "0.4.26", features = ["serde"]}
rand = "0.8.4"
uuid = { version = "1.4.1", features = ["serde", "v4", "v7"] }
serde = { version = "1.0.181", features = ["derive"] }
serde_derive = "1.0.181"
serde_json = "1.0.104"
regex = "1.8.1"
base64 = "0.21.2"
hex = "0.4.3"
tokio = "1.29.1"
typed-builder = "0.15.2"

ureq = { version = "2.7.1", features = ["json"] }
bincode = "1.3.3"
log = "0.4.17"
env_logger= "0.10.0"

[dev-dependencies]
tokio = { version = "1.28.2", features = ["macros"] }

[[example]]
name = "command_line"
[[example]]
name = "fold_bot"
[[example]]
name = "get_messages"

