[package]
name = "csml_interpreter"
version = "1.11.2"
authors = [
    "Alexis Merelo <alexis.merelo@clevy.io>",
    "François Falala-Sechet <francois@clevy.io>",
    "Bastien Botella <bastien@clevy.io>",
    "Jefferson Le Quellec <jefferson.le-quellec@clevy.io>"
]
description = """
The CSML Interpreter is the official interpreter for the CSML programming language, a DSL designed to make it extremely easy to create rich and powerful chatbots.
"""
homepage = "https://www.csml.dev"
repository = "https://github.com/CSML-by-Clevy/csml-engine"
keywords = ["chatbot", "programming-language", "csml"]
categories = ["text-processing"]
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[lib]
name = "csml_interpreter"
crate-type = ["rlib"]

[dependencies]
nom_locate = "4.0.0"
nom =  "7.1"
rand = "0.8"
jsonwebtoken = "8.1"
chrono = "0.4.26"
chrono-tz = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9.25"
serde-xml-rs = "0.6.0"
html-escape = "0.2.11"
quickxml_to_serde = {version = "0.5.0" }
libc = "0.2.147"
phf = { version = "0.11.2", features = ["macros"]}
regex = "1.8.1"
ureq = { version = "2.7.1", features = ["json"] }
urlencoding = "2.1.3"
url = "2.4.0"
rustls = { version = "0.21.6", features = ["dangerous_configuration"] }

lettre = "0.10.0-rc.4"

typetag = "0.2.12"
bincode = "1.3.3"
base64 = "0.21.2"
hex = "0.4.3"
openssl = { version = "0.10.55", features = ["vendored"] }
uuid = { version = "1.4.1", features = ["serde", "v4", "v1"] }
log = "0.4.17"
env_logger= "0.10.0"

[[example]]
name = "hello_world"

[[example]]
name = "metadata"

[[example]]
name = "event"

[[example]]
name = "memory"

[[example]]
name = "factorial"

[[example]]
name = "bot"
